--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Simple Map App</title>
+    <title>Suzhou Bicycle</title>
     <link href="touch/resources/css/sencha-touch.css" rel="stylesheet" type="text/css" />
     <script type="text/javascript" src="http://maps.google.com/maps/api/js?sensor=true"></script>
     <script src="touch/sencha-touch-debug.js" type="text/javascript"></script>
