--- a/prod.html
+++ b/prod.html
@@ -5,8 +5,8 @@
     <link href="touch/resources/css/sencha-touch.css" rel="stylesheet" type="text/css" />
     <link href="app.css" rel="stylesheet" type="text/css" />
     <script type="text/javascript" src="http://maps.google.com/maps/api/js?sensor=true"></script>
-    <script type="text/javascript" src="touch/sencha-touch-debug.js"></script>
-    <script src="app.js" type="text/javascript"></script>
+	<script type="text/javascript" src="touch/sencha-touch.js"></script>
+    <script src="app-all.js" type="text/javascript"></script>
 </head>
 <body>
 </body>
