--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <link href="app.css" rel="stylesheet" type="text/css" />
     <script type="text/javascript" src="http://maps.google.com/maps/api/js?sensor=true"></script>
     <script type="text/javascript" src="touch/sencha-touch-debug.js"></script>
+    <script src="infobubble.js" type="text/javascript"></script>
     <script src="app.js" type="text/javascript"></script>
 </head>
 <body>
